Fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ ul {
 	margin: 0;
 	padding: 0;
 	display: flex;
+	justify-content: center;
 	gap: 20px;
 	border: #6ac3e1;
 	border-style: solid;
@@ -106,6 +107,7 @@ a:hover{
   padding: 1.25rem 1.875rem;
   display: flex;
   flex-wrap: wrap;
+		text-align: center;
 }
 @media only screen and (min-width: 29.8125rem /* 477px */) {
   .ft-main {
